add feature: goalservice, leaderboard-service, mcp-server, wearable-service